// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates an empty stanza 1`] = `
RaStanza {
  "data": {},
}
`;

exports[`handles CRLF newlines 1`] = `
RaStanza {
  "data": {
    "key1": "value1",
    "key2": "value2",
  },
  "indent": "",
  "name": "value1",
  "nameKey": "key1",
}
`;

exports[`handles commented lines 1`] = `
RaStanza {
  "data": {
    "key1": "value1",
    "key2": "value2",
    "key3": "value3",
  },
  "indent": "",
  "name": "value1",
  "nameKey": "key1",
}
`;

exports[`handles continued lines 1`] = `
RaStanza {
  "data": {
    "key1": "value1",
    "key2": "a really long value that continues",
    "key3": "another really long value that continues a lot",
    "key4": "yet another really long value that continues with a comment in it",
  },
  "indent": "  ",
  "name": "value1",
  "nameKey": "key1",
}
`;

exports[`handles indented lines 1`] = `
RaStanza {
  "data": {
    "key1": "value1",
    "key2": "value",
  },
  "indent": "    ",
  "name": "value1",
  "nameKey": "key1",
}
`;

exports[`ignores indentation with checkIndent false 1`] = `
RaStanza {
  "data": {
    "key1": "value1",
    "key2": "value",
  },
  "indent": "",
  "name": "value1",
  "nameKey": "key1",
}
`;

exports[`parses a list of strings 1`] = `
RaStanza {
  "data": {
    "key1": "value1",
    "key2": "value2",
  },
  "indent": "",
  "name": "value1",
  "nameKey": "key1",
}
`;

exports[`parses a multiple line stanza 1`] = `
RaStanza {
  "data": {
    "key1": "value1",
    "key2": "value2",
    "key3": "",
  },
  "indent": "",
  "name": "value1",
  "nameKey": "key1",
}
`;

exports[`parses a single line stanza 1`] = `
RaStanza {
  "data": {
    "key1": "value1",
  },
  "indent": "",
  "name": "value1",
  "nameKey": "key1",
}
`;

exports[`populates an empty stanza 1`] = `
RaStanza {
  "data": {
    "key1": "value1",
    "key2": "value2",
  },
  "indent": "",
  "name": "value1",
  "nameKey": "key1",
}
`;
